# quantee_recruitment_task

./: .env-template  .pre-commit-config.yaml  Dockerfile  Dockerfile_api  Dockerfile_migrations  Makefile  README.md  docker-compose.yml  logging.yml  pyproject.toml
app/: __init__.py  main.py  setup_logging.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 4fa875158b16_add_file_storage.py  4fa875158b16_first_revision.py
app/api/: __init__.py  constants.py  deps.py  gunicorn_config.py  main.py  utils.py
app/api/crud/: main_router.py  upload.py
app/api/payload/: main_router.py  upload.py
app/api/routers/: main_router.py  upload.py
app/db/: __init__.py  base.py  models.py  session.py  settings.py
app/exceptions/: exception_handler.py  exceptions.py
app/validator/: allowed_extensions.py  validator.py
nginx/: Dockerfile  nginx.conf-template
tests/: test.py
tests/app/: conftest.py  test_app_utils.py  utils.py
tests/app/api/: test_utils.py
tests/app/api/crud/: test_main_router_crud.py
tests/app/api/routers/: test_main_router_routers.py
tests/app/validator/: test_validator.py
tests/load/: Dockerfile  client.py  docker-compose.yml
tests/resources/: test_upload_file.txt
