[build-system]
requires = ["setuptools == 69.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "UploadService"
version = "0.0.0"
readme="README.md"

classifiers = [
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi[all]",
    "pydantic",
    "pydantic-settings",
    "SQLAlchemy",
    "aiofiles",
    "gunicorn",
    "uvicorn-worker",
    "alembic",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "flake8",
    "black",
    "pylama[radon,mypy,toml]",

]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["storage*", "tests*"]
