[build-system]
requires = ["setuptools == 69.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "UploadService"
version = "0.0.0"
readme="README.md"

classifiers = [
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi[all]",
    "pydantic",
    "pydantic-settings",
    "SQLAlchemy",
    "aiofiles",
    "gunicorn",
    "uvicorn-worker",
    "alembic",
    "asyncpg",
]

[project.optional-dependencies]
dev = [
    "setuptools",
    "pre-commit",
    "flake8",
    "black",
    "pylama[radon,mypy,toml]",
    "requests",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["storage*", "tests*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
disable_error_code = ["import-untyped"]